# supported-target-posix

./: CMakeLists.txt  README.md
coremqtt/: core_mqtt_config.h
freertos_config/: FreeRTOSConfig.h
logging/: logging_freertos.c
vscode/: extensions.json  launch.json.in
